Project 0/CustomPackage/main/default/objects/My_Games__c/My_Games__c.object-meta.xml
<CustomObject>
    <label>My Game</label>
    <nameField>
        <label>Game</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>My Games</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>