Project 0/CustomPackage/main/default/objects/My_Games__c/fields/Developer__c.field-meta.xml
<CustomField>
    <fullName>Developer__c</fullName>
    <label>Developer</label>
    <length>80</length>
    <type>Text</type>
</CustomField>