Project 0/CustomPackage/main/default/objects/My_Games__c/fields/Game__c.field-meta.xml
<CustomField>
    <fullName>Game__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Game</label>
    <referenceTo>Game__c</referenceTo>
    <relationshipLabel>My Games</relationshipLabel>
    <relationshipName>My_Games</relationshipName>
    <type>Lookup</type>
</CustomField>