Project 0/CustomPackage/main/default/objects/My_Games__c/fields/Game_Account__c.field-meta.xml
<CustomField>
    <fullName>Game_Account__c</fullName>
    <label>Game Account</label>
    <referenceTo>Game_Account__c</referenceTo>
    <relationshipName>Game_Libraries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>