Project 0/CustomPackage/main/default/objects/My_Games__c/fields/Game_Genre__c.field-meta.xml
<CustomField>
    <fullName>Game_Genre__c</fullName>
    <label>Game Genre</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Game_Genre</valueSetName>
    </valueSet>
</CustomField>