Project 0/CustomPackage/main/default/objects/My_Games__c/fields/Game_Ratings__c.field-meta.xml
<CustomField>
    <fullName>Game_Ratings__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Game Ratings</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>