Project 0/CustomPackage/main/default/objects/My_Games__c/fields/Game_Title__c.field-meta.xml
<CustomField>
    <fullName>Game_Title__c</fullName>
    <label>Game Title</label>
    <length>90</length>
    <required>true</required>
    <type>Text</type>
</CustomField>