Project 0/CustomPackage/main/default/objects/My_Games__c/fields/My_Game__c.field-meta.xml
<CustomField>
    <fullName>My_Game__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>My Game</label>
    <referenceTo>My_Games__c</referenceTo>
    <relationshipLabel>My Games</relationshipLabel>
    <relationshipName>My_Games</relationshipName>
    <type>Lookup</type>
</CustomField>