Project 0/CustomPackage/main/default/objects/My_Games__c/fields/Publisher__c.field-meta.xml
<CustomField>
    <fullName>Publisher__c</fullName>
    <label>Publisher</label>
    <length>80</length>
    <type>Text</type>
</CustomField>